--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
-                <span class="glyphicon glyphicon-chevron-down" ></span>
-                </button>
+									<span class="sr-only">Toggle navigation</span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
+									<span class="icon-bar"></span>
             </div>
-	          <div class="collapse navbar-collapse">
-								<ul class="nav navbar-nav">
+	          <div class="collapse navbar-collapse" id="nav">
+								<ul class="nav navbar-nav navbar-right">
 										<li class="active"><a href="http://tafarid.github.io/">Welcome Page</a></li>
 										<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
 										<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
