--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
 									<span class="icon-bar"></span>
+								</button>
             </div>
 	          <div class="collapse navbar-collapse" id="nav">
-								<ul class="nav navbar-nav navbar-right">
+								<ul class="nav navbar-nav">
 										<li class="active"><a href="http://tafarid.github.io/">Welcome Page</a></li>
 										<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
 										<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
