--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<title>Who is Tafari?</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.js"></script>
+	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 
