Let's see what I broke. Trying to clean up.

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-            </div>
-	          <div class="collapse navbar-collapse" id="nav">
-								<ul class="nav navbar-nav">
-										<li class="active"><a href="http://tafarid.github.io/">Welcome Page</a></li>
-										<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
-										<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
-								</ul>
-	          </div>
-        </div>
+  <nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
+      <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+          </div>
+          <div class="collapse navbar-collapse" id="nav">
+							<ul class="nav navbar-nav">
+									<li class="active"><a href="http://tafarid.github.io/">Welcome Page</a></li>
+									<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
+									<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+							</ul>
+          </div>
+      </div>
 	</nav>
 
 
@@ -37,7 +37,7 @@
 	<h2>Hello! My name's Tafari Duncan!</h2>
 
 	<div id= "My_Face">
-		<img src="IMG_2014.jpg" class ="img-circle" alt="Who doesn't love Teslas?">
+		<img src="images/myself/IMG_2014.jpg" class ="img-circle" alt="Who doesn't love Teslas?">
 	</div>
 
 	<div id= "below_pic">
