Surprisingly, I think it all turned out great!

--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My Amazing Resume.</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
+	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+	<script src="//code.jquery.com/jquery.min.js"></script>
+	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+	<title>My Amazing Resume.</title>
 </head>
 <body>
 	<h1>Tafari Duncan</h1>
