Now, if i can just get the background on my resume up.

--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,28 @@
 	<title>My Amazing Resume.</title>
 </head>
 <body>
+
+	<nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
+			<div class="container">
+					<!-- Brand and toggle get grouped for better mobile display -->
+					<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+					</div>
+					<div class="collapse navbar-collapse" id="nav">
+							<ul class="nav navbar-nav">
+									<li><a href="http://tafarid.github.io/">Welcome Page</a></li>
+									<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
+									<li class="active"><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+							</ul>
+					</div>
+			</div>
+	</nav>
+
 	<h1>Tafari Duncan</h1>
 	<h2>Tafari.Duncan@Tufts.edu</h2>
 
