trying to make text white.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<h2>Future Software Engineer,<br>at your service.</h2>
   </div>
 
-	<h5 class="text-left"><small>  Built by Tafari Duncan, powered by Bootstrap</small></h5>
+	<h5 class="text-left">  Built by Tafari Duncan, powered by Bootstrap</h5>
 </body>
 
 </html>
