I will never be done.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
 		<h2>Future Software Engineer,<br>at your service.</h2>
   </div>
 
-	<h5 class="text-left">  Built by Tafari Duncan, powered by Bootstrap</h5>
+	<div class="navbar-static-bottom" id="footer">
+		<h5 class="text-left">  Built by Tafari Duncan, powered by Bootstrap</h5>
+	</div>
 </body>
 
 </html>
