Tweaking menu bar.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 		<h2>Future Software Engineer,<br>at your service.</h2>
   </div>
 
-	<div class="navbar-static-bottom" id="footer">
-		<h5 class="text-left">  Built by Tafari Duncan, powered by Bootstrap</h5>
+	<div class="footer">
+		<h5>  Built by Tafari Duncan, powered by Bootstrap</h5>
 	</div>
 </body>
 
