I'm done for today haha.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
 
 	<div class="footer">
-		<h5>  Built by Tafari Duncan, powered by Bootstrap</h5>
+		<p>  Built by Tafari Duncan, powered by Bootstrap</p>
 	</div>
 </body>
 
