--- a/resume.html
+++ b/resume.html
@@ -99,5 +99,9 @@
     <div id = "end">
     	<a href="http://tafarid.github.io">Back to Home Page</a>
     </div>
+
+		<div class="footer">
+			<p>  Built by Tafari Duncan, powered by Bootstrap</p>
+		</div>
 </body>
 </html>
