Trying to add PDF of resume

--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,10 @@
 			</div>
 	</nav>
 
+	<embed src="CS Student Tafari.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+
+	<!--
+
 	<h1>Tafari Duncan</h1>
 	<h2>Tafari.Duncan@Tufts.edu</h2>
 
@@ -102,6 +106,6 @@
 
 		<div class="footer">
 			<p>  Built by Tafari Duncan, powered by Bootstrap</p>
-		</div>
+		</div> -->
 </body>
 </html>
