Adjusting size of resume box

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 			</div>
 	</nav>
 
-	<embed src="CS Student Tafari.pdf" width="600" height="500" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+	<embed src="CS Student Tafari.pdf" width="75%" height="100%" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
 
 	<!--
 
