--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 			</div>
 	</nav>
 
-	<embed src="CS Student Tafari.pdf" width="75%" height="100%" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
+<iframe src="CS Student Tafari.pdf" style="width:75%; height:100%;" frameborder="0"></iframe>
 
 	<!--
 
