Now I've got an error message if it doesn't work.

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,11 @@
 			</div>
 	</nav>
 
-<iframe src="CS Student Tafari.pdf" style="width:75%; height:100%;" frameborder="0"></iframe>
+	<div id="pdf">
+  <object width="400" height="500" type="application/pdf" data="CS Student Tafari.pdf" id="pdf_content">
+    <p>Sorry! Your browser isn't compatible!</p>
+  </object>
+  </div>
 
 	<!--
 
