Will this work?

--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 			</div>
 	</nav>
 
-	<div id="pdf">
+	<div id="pdf" style = "height:100%">
   <object width="75%" height="90%" type="application/pdf" data="CS Student Tafari.pdf" id="pdf_content">
     <p>Sorry! Your browser isn't compatible!</p>
   </object>
