Still having height and width issues.

--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 	</nav>
 
 	<div id="pdf">
-  <object width="75%" type="application/pdf" data="CS Student Tafari.pdf" id="pdf_content">
+  <object width="75vh" height="100vh" type="application/pdf" data="CS Student Tafari.pdf" id="pdf_content">
     <p>Sorry! Your browser isn't compatible!</p>
   </object>
   </div>
