Still having height and width issues.

--- a/resume.html
+++ b/resume.html
@@ -32,11 +32,7 @@
 			</div>
 	</nav>
 
-	<div id="pdf">
-  <object width="75vh" height="100vh" type="application/pdf" data="CS Student Tafari.pdf" id="pdf_content">
-    <p>Sorry! Your browser isn't compatible!</p>
-  </object>
-  </div>
+  <embed src="CS Student Tafari.pdf" width="75%" height="100vh" type='application/pdf'>
 
 	<!--
 
