--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 			</div>
 	</nav>
 
-  <embed src="CS Student Tafari.pdf" width="75%" height="100vh" type='application/pdf'>
+	<object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"></object>
 
 	<!--
 
