Still having height and width issues.

--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,12 @@
 			</div>
 	</nav>
 
+	<object data="CS Student Tafari.pdf" type="application/pdf" width="100vh" height="100vh">
+    <p>It appears you don't have a PDF plugin for this browser.
+    No biggie... you can <a href="myfile.pdf">click here to
+    download the PDF file.</a></p>
+	</object>
+
 	<!--
 
 	<h1>Tafari Duncan</h1>
