--- a/resume.html
+++ b/resume.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<!--
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
@@ -13,7 +14,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
 			<div class="container">
-					<!-- Brand and toggle get grouped for better mobile display -->
+					<!-- Brand and toggle get grouped for better mobile display
 					<div class="navbar-header">
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
 								<span class="sr-only">Toggle navigation</span>
@@ -30,87 +31,14 @@
 							</ul>
 					</div>
 			</div>
-	</nav>
+	</nav> -->
 
-	<object data="CS Student Tafari.pdf" type="application/pdf" width="100vh" height="100vh">
+	<object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%">
     <p>It appears you don't have a PDF plugin for this browser.
     No biggie... you can <a href="myfile.pdf">click here to
     download the PDF file.</a></p>
 	</object>
 
-	<!--
-
-	<h1>Tafari Duncan</h1>
-	<h2>Tafari.Duncan@Tufts.edu</h2>
-
-
-	<h4>CURRENT ADDRESS</h4>
-	<p>153 Lewis Hall, <br>
-	   Medford, MA, 02155 <br>
-	</p>
-
-	<h4>EDUCATION</h4>
-	<p>Tufts University, Medford, Massachusetts<br>
-	   Bachelor of Science in Computer Science, Expected Graduation Date: May 2017 <br>
-	   Minor in Engineering Management <br>
-	</p>
-
-	<h4>RELEVANT COURSES</h4>
-	<div id= "Resume_text">
-		<p> <span class = green>Currently Taking </span> <br> <br>
-
-			Web Programming, <br> Computer Science Data Structures, <br> Intro To Photography, <br> Introduction to Digital Logic, <br> Geology <br>
-
-			<br> <br> <span class = green>Completed Already: </span> <br> <br>
-
-		   Physics; <br> Calculus I, II & III; <br> Global Product Development; <br> English I; <br> Intro. To Computing In Engineering; <br> Intro. To Philosophy; <br> Intro. To Computer Science; <br> Intro. To Electrical Engineering</p>
-    </div>
-
-    <h4>EXPERIENCE</h4>
-    <p>
-
-		<span class= "bold">Center for Engineering Education & Outreach, Medford, MA</span>     <span class="tilt">Transcriber</span>     Nov. 2014-Dec. 2014 <br>
-		•	Reviewed and oversaw transcribing of video data from interview and project records. <br><br><br>
-		<span class= "bold">Tufts University Telefund, Medford, MA</span>         <span class= "tilt">Student Fundraiser</span>                   Sept. 2013-May. 2014 <br>
-		•	Called university alumni, friends, and affiliates to fundraise for annual fund. <br>
-		•	Raised over $50,000 for the university in 200 hours worked. <br>
-	</p>
-
-	<h4>LEADERSHIP</h4>
-    <p>
-
-		<span class= "bold">Asylum Hill Cong. Church, Hartford, CT</span>     <span class="tilt">Search Committee Member</span>     Aug. 2012-Jan. 2013 <br>
-		•	Elected member of associate minister search committee. <br><br><br>
-		•	Reviewed applications and participated in administrative discussions to select potential candidate. <br>
-		<span class= "bold">Watkinson School, Hartford, CT</span>         <span class= "tilt">Design Team Head</span>                   July 2012-Jan.2013 <br>
-		•	Co-founded Watkinson School’s first engineering design team, The Watkinson Rams. <br>
-		•	Led the team to top three out of 16 schools in first year. <br>
-
-	</p>
-
-	<h4>ACTIVITES</h4>
-    <p>
-
-		<span class= "bold">Tufts University Varsity Crew</span>     December 2014 - Present <br>
-	</p>
-
-	<h4>COMPUTER SKILLS</h4>
-    <p>
-
-		•	Microsoft Office (Word, Excel, PowerPoint), InqScribe, <br>
-		•	Solid works, Mathcad, <br>
-		•	Microsoft Visual Basic, Some Java Experience, C++, HTML, CSS <br>
-
-	</p>
-
-
-    <div id = "end">
-    	<a href="http://tafarid.github.io">Back to Home Page</a>
-    </div>
-
-		<div class="footer">
-			<p>  Built by Tafari Duncan, powered by Bootstrap</p>
-		</div> -->
 </body>
 
 </html>
