Still having height and width issues.

--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<!--
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
@@ -14,7 +13,7 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
 			<div class="container">
-					<!-- Brand and toggle get grouped for better mobile display
+					<!-- Brand and toggle get grouped for better mobile display -->
 					<div class="navbar-header">
 							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#nav" aria-expanded="false">
 								<span class="sr-only">Toggle navigation</span>
@@ -31,13 +30,14 @@
 							</ul>
 					</div>
 			</div>
-	</nav> -->
+	</nav>
 
-	<object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%">
-    <p>It appears you don't have a PDF plugin for this browser.
-    No biggie... you can <a href="myfile.pdf">click here to
+	<!-- For some reason, the PDF won't render properly. -->
+	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
+    <p>It seems something went wrong! No problem!...
+			you can <a href="CS Student Tafari.pdf">click here to
     download the PDF file.</a></p>
-	</object>
+	<!-- </object> -->
 
 </body>
 
