Until this works, I have a temporary ugly fix.

--- a/resume.html
+++ b/resume.html
@@ -34,11 +34,11 @@
 
 	<!-- For some reason, the PDF won't render properly. -->
 	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
-    <p><br><br>WELCOME TO MY RESUME!<br>
-			Hmm, something cool was supposed to happen.<br>
-			It seems something went wrong! No problem!...<br>
+    <p><br><br>WELCOME TO MY RESUME!<br><br><br>
+			Hmm, something cool was supposed to happen...<br>
+			It seems something went wrong! No problem!   <br>
 			you can <a href="CS Student Tafari.pdf">click here to
-    	download the PDF file.</a></p>
+    	get the PDF file.</a></p>
 	<!-- </object> -->
 
 </body>
