Moderate improvements and redesign of hiring page.

--- a/resume.html
+++ b/resume.html
@@ -26,19 +26,21 @@
 							<ul class="nav navbar-nav">
 									<li><a href="http://tafarid.github.io/">Welcome Page</a></li>
 									<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
-									<li class="active"><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+									<li class="active"><a href="http://tafarid.github.io/resume.html">Thinking about hiring Tafari?</a></li>
 							</ul>
 					</div>
 			</div>
 	</nav>
 
-	<!-- For some reason, the PDF won't render properly. -->
+	<!--the PDF won't render correctly, will return to this later -->
 	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
-    <p><br><br>WELCOME TO MY RESUME!<br><br><br>
-			Hmm, something cool was supposed to happen...<br>
-			It seems something went wrong! No problem!   <br>
-			you can <a href="CS Student Tafari.pdf">click here to
-    	get the PDF file.</a></p>
+	<div class="container">
+      <p><br><br>Hello! Thank you for taking the time to consider hiring me.<br><br><br>
+			I am currently looking for internship opportunities where I can apply my software <br>
+			skills. I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Internship%20Opportunity" target="_top">tafari.duncan@tufts.edu</a> <br>
+
+			<a href="CS Student Tafari.pdf" class="btn btn-info" role="button">Click here to see my Resume!</a>
+	</div>
 	<!-- </object> -->
 
 </body>
