--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<ul class="nav navbar-nav">
 									<li class="active"><a href="http://tafarid.github.io/">Welcome Page</a></li>
 									<li><a href="http://tafarid.github.io/bio.html">Tafari's History</a></li>
-									<li><a href="http://tafarid.github.io/resume.html">Why hire Tafari?</a></li>
+									<li><a href="http://tafarid.github.io/resume.html">Thinking about hiring Tafari?</a></li>
 							</ul>
           </div>
       </div>
