--- a/resume.html
+++ b/resume.html
@@ -34,7 +34,7 @@
 
 	<!--the PDF won't render correctly, will return to this later -->
 	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
-	<div class="container">
+	<div class="Backlit">
 			<br><br>
       <h2><br><br>Hello! Thank you for taking the time to consider hiring me.<br><br><br>
 			I am currently looking for internship opportunities where I can apply my software <br>
