Implementing Backlit Part 3-5

--- a/resume.html
+++ b/resume.html
@@ -35,10 +35,9 @@
 	<!--the PDF won't render correctly, will return to this later -->
 	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
 	<div class="Backlit">
-			<br><br>
       <h2><br><br>Hello! Thank you for taking the time to consider hiring me.<br><br><br>
-			I am currently looking for internship opportunities where I can apply my software <br>
-			skills. I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Internship%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a></h2><br>
+			I am currently looking for internship opportunities where I can apply my software skills.<br>
+			I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Internship%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a></h2><br>
 			<br>
 			<br>
 			<a href="CS Student Tafari.pdf" class="btn btn-info" role="button">Click here to see my Resume!</a>
