--- a/resume.html
+++ b/resume.html
@@ -32,14 +32,19 @@
 			</div>
 	</nav>
 
+	<br>
+	<br>
+	<br>
+	
 	<!--the PDF won't render correctly, will return to this later -->
 	<!-- <object data="CS Student Tafari.pdf" type="application/pdf" width="100%" height="100%"> -->
 	<div class="Backlit">
-      <h2><br><br>Hello! Thank you for taking the time to consider hiring me.<br><br>
+      <h2><br>Hello! Thank you for taking the time to consider hiring me.<br><br>
 			I am currently looking for internship opportunities where I can apply my software skills.<br>
 			I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Internship%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a></h2><br>
 			<br>
 			<a href="CS Student Tafari.pdf" class="btn btn-info" role="button">Click here to see my Resume!</a>
+			<br>
 			<br>
 	</div>
 	<!-- </object> -->
