Added Google Tracking.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+	<script src="http://tafarid.github.io/googtrack.js"></script>
 	<title>Who is Tafari?</title>
 </head>
 <body>
