It's not loading.

--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
 	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
-	<script src="http://tafarid.github.io/googtrack.js"></script>
+	<script src="googtrack.js"></script>
 	<title>My Amazing Resume.</title>
 </head>
 <body>
