Updated a few things.

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
 		<p></p>
 		<p><abbr title ="The world won't change unless we make it.">Let's do something awesome.</abbr></p>
 		<h2>Future Software Engineer,<br>at your service.</h2>
-  </div>
+    </div>
 
 	<div class="footer">
 		<p>  Built by Tafari Duncan, powered by Bootstrap</p>
 	</div>
 </body>
 
+	<link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
+	
 </html>
