Updating resume page

--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
+	<link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
 	<script src="//code.jquery.com/jquery.min.js"></script>
 	<script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<script src="googtrack.js"></script>
@@ -42,7 +43,7 @@
 	<div class="Backlit">
       <h2><br>Hello! Thank you for taking the time to consider hiring me.<br><br>
 			I am currently looking for internship opportunities where I can apply my software skills.<br>
-			I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Internship%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a></h2><br>
+			I can be contacted at <a href="mailto:tafari.duncan@tufts.edu?Subject=Job%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a></h2><br>
 			<br>
 			<a href="CS Student Tafari.pdf" class="btn btn-info" role="button">Click here to see my Resume!</a>
 			<br><br>
