--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="construction.css">
 	<link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
 	<script src="googtrack.js"></script>
-  <script src="http://tafarid.github.io/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+  <script src="bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
 	<title>Tafari Duncan's GitHub</title>
 </head>
 <body>
