--- a/new_index.html
+++ b/new_index.html
@@ -4,33 +4,18 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="construction.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
   <script src="googtrack.js"></script>
+  <script src="loading.js"></script>
   <title>Tafari Duncan's GitHub</title>
 </head>
-<body>
+<body onload="hideloader()">
+
+<div id = "loading"></div>
 
 <!-- The code for the progress bar below was borrowed from https://codepen.io/AllThingsSmitty/pen/zxGyXd -->
-<div aria-busy="true" aria-label="Loading" role="progressbar" class="container">
-  <div class="swing">
-    <div class="swing-l"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div class="swing-r"></div>
-  </div>
-  <div class="shadow">
-    <div class="shadow-l"></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div class="shadow-r"></div>
-  </div>
- </div>
+
 </body>
 
 </html>
