Fixed loading animations, for now

--- a/new_index.html
+++ b/new_index.html
@@ -11,8 +11,11 @@
   <title>Tafari Duncan's GitHub</title>
 </head>
 <body onload="hideloader()">
+<!---->
 
-<div id = "loading"></div>
+<div id = "loading_box">
+  <div id = "loading"></div>
+</div>
 
 <!-- The code for the progress bar below was borrowed from https://codepen.io/AllThingsSmitty/pen/zxGyXd -->
 
