New Home page 90% done!

--- a/new_index.html
+++ b/new_index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="construction.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
   <script src="googtrack.js"></script>
@@ -11,13 +11,66 @@
   <title>Tafari Duncan's GitHub</title>
 </head>
 <body onload="hideloader()">
-<!---->
+
+
+<!--Loading Stuff-->
 
 <div id = "loading_box">
   <div id = "loading"></div>
 </div>
 
-<!-- The code for the progress bar below was borrowed from https://codepen.io/AllThingsSmitty/pen/zxGyXd -->
+<!-- Main Picture, Code Sourced from https://codepen.io/jascha/pen/lekgC -->
+
+<div class="pulse1"></div>
+<div class="pulse2"></div>
+<div class="profilepicture"></div>
+
+<!-- Super cool nav bar, Code Sourced from https://codepen.io/lbebber/pen/LELBEo-->
+  
+<div>  
+  <nav class="menu">
+     <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
+     <label class="menu-open-button" for="menu-open">
+      <span class="lines line-1"></span>
+      <span class="lines line-2"></span>
+      <span class="lines line-3"></span>
+    </label>
+
+     <a href="#" class="menu-item blue"> 
+        <i class="fa fa-male"></i>
+        <p class="imgDesc">My Bio</p>
+     </a>
+     <a href="#" class="menu-item green"> 
+        <i class="fa fa-file-pdf-o"></i>
+        <p class="imgDesc">Resume</p>
+     </a>
+     <a href="#" class="menu-item red">
+        <i class="fa fa-question"></i>
+        <p class="imgDesc">Mystery</p>
+     </a>
+     <a href="#" class="menu-item purple"> 
+        <i class="fa fa-github"></i>
+        <p class="imgDesc">My Github</p>
+     </a>
+     <a href="#" class="menu-item orange">
+        <i class="fa fa-envelope"></i>
+        <p class="imgDesc">Email me!</p>
+     </a>
+     <a href="#" class="menu-item lightblue">
+        <i class="fa fa-linkedin"></i>
+        <p class="imgDesc">Linkedin</p>
+     </a>
+  </nav>
+</div>
+
+<!-- Really cool code for progress bar from https://codepen.io/AllThingsSmitty/pen/zxGyXd, not used
+but I might add it later! -->
+
+<div class= "credit">
+ <p>Assembled based on code by <a href="https://codepen.io/jascha/pen/lekgC">Jascha Goltermann</a>
+ and <a href="https://codepen.io/jordanlachance/pen/yOJdRr">Jordan LaChance</a>
+ </p>
+</div>
 
 </body>
 
