--- a/new_index.html
+++ b/new_index.html
@@ -65,7 +65,9 @@
 
 <!-- Really cool code for progress bar from https://codepen.io/AllThingsSmitty/pen/zxGyXd, not used
 but I might add it later! -->
-<br><br>
+<div>
+</div>
+
 <div class= "credit">
  <p>Assembled based on code by <a href="https://codepen.io/jascha/pen/lekgC">Jascha Goltermann</a>
  and <a href="https://codepen.io/jordanlachance/pen/yOJdRr">Jordan LaChance</a>
