--- a/new_index.html
+++ b/new_index.html
@@ -20,55 +20,54 @@
 </div>
 
 <!-- Main Picture, Code Sourced from https://codepen.io/jascha/pen/lekgC -->
+ 
+  <div class="pulse1"></div>
+  <div class="pulse2"></div>
+  <div class="profilepicture"></div>
 
-<div class="pulse1"></div>
-<div class="pulse2"></div>
-<div class="profilepicture"></div>
+  <!-- Super cool nav bar, Code Sourced from https://codepen.io/lbebber/pen/LELBEo-->
+    
 
-<!-- Super cool nav bar, Code Sourced from https://codepen.io/lbebber/pen/LELBEo-->
-  
-<div>  
-  <nav class="menu">
-     <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
-     <label class="menu-open-button" for="menu-open">
-      <span class="lines line-1"></span>
-      <span class="lines line-2"></span>
-      <span class="lines line-3"></span>
-    </label>
+    <nav class="menu">
+       <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
+       <label class="menu-open-button" for="menu-open">
+        <span class="lines line-1"></span>
+        <span class="lines line-2"></span>
+        <span class="lines line-3"></span>
+      </label>
 
-     <a href="#" class="menu-item blue"> 
-        <i class="fa fa-male"></i>
-        <p class="imgDesc">My Bio</p>
-     </a>
-     <a href="#" class="menu-item green"> 
-        <i class="fa fa-file-pdf-o"></i>
-        <p class="imgDesc">Resume</p>
-     </a>
-     <a href="#" class="menu-item red">
-        <i class="fa fa-question"></i>
-        <p class="imgDesc">Mystery</p>
-     </a>
-     <a href="#" class="menu-item purple"> 
-        <i class="fa fa-github"></i>
-        <p class="imgDesc">My Github</p>
-     </a>
-     <a href="#" class="menu-item orange">
-        <i class="fa fa-envelope"></i>
-        <p class="imgDesc">Email me!</p>
-     </a>
-     <a href="#" class="menu-item lightblue">
-        <i class="fa fa-linkedin"></i>
-        <p class="imgDesc">Linkedin</p>
-     </a>
-  </nav>
-</div>
+       <a href="#" class="menu-item blue"> 
+          <i class="fa fa-male"></i>
+          <p class="imgDesc">My Bio</p>
+       </a>
+       <a href="#" class="menu-item green"> 
+          <i class="fa fa-file-pdf-o"></i>
+          <p class="imgDesc">Resume</p>
+       </a>
+       <a href="#" class="menu-item red">
+          <i class="fa fa-question"></i>
+          <p class="imgDesc">Mystery</p>
+       </a>
+       <a href="#" class="menu-item purple"> 
+          <i class="fa fa-github"></i>
+          <p class="imgDesc">My Github</p>
+       </a>
+       <a href="#" class="menu-item orange">
+          <i class="fa fa-envelope"></i>
+          <p class="imgDesc">Email me!</p>
+       </a>
+       <a href="#" class="menu-item lightblue">
+          <i class="fa fa-linkedin"></i>
+          <p class="imgDesc">Linkedin</p>
+       </a>
+    </nav>
 
 <!-- Really cool code for progress bar from https://codepen.io/AllThingsSmitty/pen/zxGyXd, not used
 but I might add it later! -->
-<div>
-</div>
 
-<div class= "credit">
+<div class="push"></div>
+
+<div class="credit">
  <p>Assembled based on code by <a href="https://codepen.io/jascha/pen/lekgC">Jascha Goltermann</a>
  and <a href="https://codepen.io/jordanlachance/pen/yOJdRr">Jordan LaChance</a>
  </p>
