Need more time :P

--- a/new_index.html
+++ b/new_index.html
@@ -65,7 +65,12 @@
 <!-- Really cool code for progress bar from https://codepen.io/AllThingsSmitty/pen/zxGyXd, not used
 but I might add it later! -->
 
-<div class="push"></div>
+<div class="foldout">
+
+This is the content area for my happy little fold-outs that I am going to add to my pages. They are like happy littlespace saving recipe cards for css tricks. Lets make the text in this one much longer so we can see if the transition grows with the content...This is the content area for my happy little fold-outs that I am going to add to my pages. They are like happy little space saving recipe cards for css tricks. Lets make the text in this one much longer so we can see if the transition grows with the content...This is the content area for my happy little fold-outs that I am going to add to my pages. They are like happy littlespace saving recipe cards for css tricks. Lets make the text in this one much longer so we can see if the transition grows with the content...
+
+</div>
+
 
 <div class="credit">
  <p>Assembled based on code by <a href="https://codepen.io/jascha/pen/lekgC">Jascha Goltermann</a>
