--- a/new_index.html
+++ b/new_index.html
@@ -72,11 +72,10 @@ This is the content area for my happy little fold-outs that I am going to add to
 </div>
 
 
-<div class="credit">
- <p>Assembled based on code by <a href="https://codepen.io/jascha/pen/lekgC">Jascha Goltermann</a>
- and <a href="https://codepen.io/jordanlachance/pen/yOJdRr">Jordan LaChance</a>
- </p>
-</div>
+<!-- CREDIT / CITIATIONS
+ Assembled based on code from "https://codepen.io/jascha/pen/lekgC" by Jascha Goltermann
+ and from "https://codepen.io/jordanlachance/pen/yOJdRr" by Jordan LaChance
+-->
 
 </body>
 
