Last thing is the header

--- a/new_index.html
+++ b/new_index.html
@@ -17,9 +17,11 @@
 
 <!--Loading Stuff-->
 
-<div id = "loading_box">
-  <div id = "loading"></div>
-</div>
+  <div id = "loading_box">
+    <div id = "loading"></div>
+  </div>
+
+  <!-- <div id="titleth"><h1><br>Bonjour! Welcome to <br> Tafari Duncan's page!</h1></div> -->
 
 <!-- Main Picture, Code Sourced from https://codepen.io/jascha/pen/lekgC -->
 
@@ -80,7 +82,7 @@ but I might add it later! -->
       am not currently looking for work, but I am always open to networking opportunties! Please
       contact me via email if you would like to learn more!</p>
       <br>
-      <span style="text-align:center"><button type="button" class="btn btn-secondary" id="close-btn">Close</button></span>
+      <div style="text-align:center"><button type="button" class="btn btn-secondary" id="close-btn">Close</button></div>
       </div>
 
     </div>
