Updated old pages to redirect to new page.

--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta http-equiv="refresh" content="1; url=https:/tafarid.github.io/">
+	<script type="text/javascript">
+			window.location.href = "https:/tafarid.github.io/"
+	</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
@@ -12,7 +16,12 @@
 	<title>Who is Tafari?</title>
 </head>
 <body>
-
+	<div id="alert">
+		<br> <br> <br>
+    <a class="alert" href="https://tafarid.github.io/">This page is obsolete and present for timeline reasons. <br>
+		Please click here to go the updated page</a>
+	</div>
+	
   <nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
       <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
