--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="refresh" content="1; url=https:/tafarid.github.io/">
+	<script type="text/javascript">
+			window.location.href = "https:/tafarid.github.io/"
+	</script>
 	<link rel="stylesheet" href="http://tafarid.github.io/bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="bio-style.css">
 	<link rel="shortcut icon" href="images/misc/animated-pink-blue-elephant-waving.gif">
@@ -12,6 +16,11 @@
 	<title>My Amazing Resume.</title>
 </head>
 <body>
+	<div id="alert">
+		<br> <br> <br>
+    <a class="alert" href="https://tafarid.github.io/">This page is obsolete and present for timeline reasons. <br>
+		Please click here to go the updated page</a>
+	</div>
 
 	<nav class="navbar navbar-default navbar-fixed-top navbar-collapse">
 			<div class="container">
