--- a/old_index.html
+++ b/old_index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="refresh" content="1; url=https:/tafarid.github.io/">
+	<script type="text/javascript">
+			window.location.href = "https:/tafarid.github.io/"
+	</script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="construction.css">
@@ -13,9 +17,15 @@
 </head>
 <body>
 
+	<div id="alert">
+		<br> <br> <br>
+		<a class="alert" href="https://tafarid.github.io/">This page is obsolete and present for timeline reasons. <br>
+		Please click here to go the updated page</a>
+	</div>
+
 <div id = "intro">
-  <p> 
-  Hello, and welcome to my Github page! <br> <br> 
+  <p>
+  Hello, and welcome to my Github page! <br> <br>
   I am currently in the process of updating my site, and so my old one has been taken down. <br>
   If you came here hoping to find my resume, please check below. If you are looking to <br>
   contact me, I can be reached at <a href="mailto:tafari.duncan@tufts.edu?Subject=Job%20Opportunity" target="_top">Tafari.Duncan@Tufts.Edu</a> </p>
